<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/padding_normal"
        android:layout_marginEnd="@dimen/padding_normal"
        android:layout_marginStart="@dimen/padding_normal"
        android:layout_marginTop="@dimen/padding_normal">


        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/licencePublisherImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            card_view:srcCompat="@drawable/background_splash"
            tools:layout_constraintTop_creator="1"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            tools:layout_constraintLeft_creator="1"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="16dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/libraryLabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/library_label"
            tools:layout_constraintTop_creator="1"
            android:layout_marginStart="@dimen/padding_extra"
            tools:layout_constraintLeft_creator="1"
            card_view:layout_constraintLeft_toRightOf="@+id/licencePublisherImage"
            card_view:layout_constraintTop_toBottomOf="@+id/licenceText" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/libraryText"
            android:layout_width="202dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginTop="0dp"
            android:text="@string/library_placeholder"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintLeft_toLeftOf="@+id/libraryLabelText"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/libraryLabelText" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/licenceLabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/licence_label"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintLeft_creator="1"
            card_view:layout_constraintLeft_toLeftOf="@+id/libraryLabelText"
            android:layout_marginLeft="0dp"
            card_view:layout_constraintTop_toTopOf="@+id/licencePublisherImage"
            android:layout_marginTop="0dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/licenceText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="0dp"
            android:text="@string/licence_placeholder"
            card_view:layout_constraintLeft_toLeftOf="@+id/licenceLabelText"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/licenceLabelText"
            tools:layout_constraintBaseline_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/usedForLabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/used_for_label"
            tools:layout_constraintTop_creator="1"
            android:layout_marginStart="16dp"
            tools:layout_constraintLeft_creator="1"
            card_view:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            card_view:layout_constraintTop_toBottomOf="@+id/libraryText" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/usedForText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_extra"
            android:layout_marginStart="@dimen/padding_extra"
            android:text="@string/used_for_placeholder"
            card_view:layout_constraintBaseline_toBaselineOf="@+id/usedForLabelText"
            card_view:layout_constraintLeft_toRightOf="@+id/licencePublisherImage"
            card_view:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintBaseline_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/viewLicenceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/licence_button_label"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintRight_toLeftOf="@+id/viewLibraryButton"
            card_view:layout_constraintTop_toTopOf="@+id/viewLibraryButton"
            android:layout_marginTop="0dp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/viewLibraryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/library_button_label"
            tools:layout_constraintTop_creator="1"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintLeft_toRightOf="@+id/viewLicenceButton"
            android:layout_marginTop="8dp"
            card_view:layout_constraintTop_toBottomOf="@+id/usedForText" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
